--- a/html/search.html
+++ b/html/search.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <link href="../css/animate.css" rel="stylesheet"/>
     <link href="../css/bootstrap.min.css" rel="stylesheet"/>
@@ -156,6 +156,23 @@
             </div>
             <div class="panel panel-hashtag col-sm-3 col-md-3 col-lg-2 col-lg-offset-1">
               <div class="panel-heading">
+                <h3 class="panel-title"><a href="project.html">#Java</a></h3>
+              </div>
+              <div class="panel-body">
+                <div class="info-container">
+                  <ul class="hashtag-params">
+                    <li class="param">
+                      <span><a href="#findProjects">33 <i class="fa fa-file-archive-o"></i></a></span>
+                    </li>
+                    <li class="param">
+                      <span><a href="#findPeople">350 <i class="fa fa-users"></i></a></span>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <div class="panel col-sm-3 col-md-3 col-lg-2 col-lg-offset-1">
+              <div class="panel-heading">
                 <h3 class="panel-title"><a href="project.html">Sample art panel</a></h3>
               </div>
               <div class="panel-body">
@@ -197,6 +214,59 @@
                     <p class="description-header"><b>Description</b></p>
                     <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In et finibus felis. Aliquam ante nunc, venenatis vitae tristique convallis, ultrices a nunc. Duis at nibh.</p>
                   </div>
+                </div>
+              </div>
+            </div>
+            <div class="panel panel-profile col-sm-3 col-md-3 col-lg-2 col-lg-offset-1">
+              <div class="panel-body">
+                <div class="image-container profile-img">
+                  <a href="#profile"><img class="img-circle img-responsive" src="../img/author-m.jpg"></img></a>
+                </div>
+                <div class="info-container">
+                  <p class="author"><a href="#" class="author">John Doe</a></p>
+                  <p class="author-email">johnDoe@gmail.com</p>
+                  <hr>
+                    <ul class="project_hashtags">
+                      <li class="hashtag">
+                        <a href="#"><span class="label label-success">#CSS3</span></a>
+                      </li>
+                      <li class="hashtag">
+                        <a href="#"><span class="label label-success">#HTML5</span></a>
+                      </li>
+                      <li class="hashtag">
+                        <a href="#"><span class="label label-success">#JS</span></a>
+                      </li>
+                    </ul>
+                  <hr>
+                  <ul class="project-params">
+                    <li class="param">
+                      <span>2 <i class="fa fa-star-o"></i></span>
+                    </li>
+                    <li class="param">
+                      <span>25 <i class="fa fa-comment-o"></i></span>
+                    </li>
+                    <li class="param">
+                      <span>1 <i class="fa fa-file-code-o"></i></span>
+                    </li>
+                  </ul>
+                  <p class="status status-available">Looking for a project</p>
+                </div>
+              </div>
+            </div>
+            <div class="panel panel-hashtag col-sm-3 col-md-3 col-lg-2 col-lg-offset-1">
+              <div class="panel-heading">
+                <h3 class="panel-title"><a href="project.html">#Java</a></h3>
+              </div>
+              <div class="panel-body">
+                <div class="info-container">
+                  <ul class="hashtag-params">
+                    <li class="param">
+                      <span><a href="#findProjects">33 <i class="fa fa-file-archive-o"></i></a></span>
+                    </li>
+                    <li class="param">
+                      <span><a href="#findPeople">350 <i class="fa fa-users"></i></a></span>
+                    </li>
+                  </ul>
                 </div>
               </div>
             </div>
