--- a/html/search.html
+++ b/html/search.html
@@ -102,7 +102,152 @@
                   <hr>
                   <ul class="project-params">
                     <li class="param">
-                      <span>40 <i class="fa fa-heart"></i></span>
+                      <span>40 <i class="fa fa-heart-o"></i></span>
+                    </li>
+                    <li class="param">
+                      <span>25 <i class="fa fa-eye"></i></span>
+                    </li>
+                    <li class="param">
+                      <span>0/3 <i class="fa fa-child"></i></span>
+                    </li>
+                  </ul>
+                  <div class="description-sector">
+                    <p class="description-header"><b>Description</b></p>
+                    <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In et finibus felis. Aliquam ante nunc, venenatis vitae tristique convallis, ultrices a nunc. Duis at nibh.</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="panel panel-profile col-sm-3 col-md-3 col-lg-2 col-lg-offset-1">
+              <div class="panel-body">
+                <div class="image-container profile-img">
+                  <a href="#profile"><img class="img-circle img-responsive" src="../img/author-m.jpg"></img></a>
+                </div>
+                <div class="info-container">
+                  <p class="author"><a href="#" class="author">John Doe</a></p>
+                  <p class="author-email">johnDoe@gmail.com</p>
+                  <hr>
+                    <ul class="project_hashtags">
+                      <li class="hashtag">
+                        <a href="#"><span class="label label-success">#CSS3</span></a>
+                      </li>
+                      <li class="hashtag">
+                        <a href="#"><span class="label label-success">#HTML5</span></a>
+                      </li>
+                      <li class="hashtag">
+                        <a href="#"><span class="label label-success">#JS</span></a>
+                      </li>
+                    </ul>
+                  <hr>
+                  <ul class="project-params">
+                    <li class="param">
+                      <span>2 <i class="fa fa-star-o"></i></span>
+                    </li>
+                    <li class="param">
+                      <span>25 <i class="fa fa-comment-o"></i></span>
+                    </li>
+                    <li class="param">
+                      <span>1 <i class="fa fa-file-code-o"></i></span>
+                    </li>
+                  </ul>
+                  <p class="status status-available">Looking for a project</p>
+                </div>
+              </div>
+            </div>
+            <div class="panel col-sm-3 col-md-3 col-lg-2 col-lg-offset-1">
+              <div class="panel-heading">
+                <h3 class="panel-title"><a href="project.html">Sample art panel</a></h3>
+              </div>
+              <div class="panel-body">
+                <div class="image-container">
+                  <a href="#"><img src="../img/proj_img-1.jpg"></img></a>
+                </div>
+                <div class="info-container">
+                  <p><b>by <a href="#" class="author">John Doe</a></b></p>
+                  <p class="project-category">Category: <a href="#">Art</a></p>
+                  <hr>
+                  <ul class="project_hashtags">
+                    <li class="hashtag">
+                      <a href="#"><span class="label label-success">#Photoshop</span></a>
+                    </li>
+                    <li class="hashtag">
+                      <a href="#"><span class="label label-success">#Illustrator</span></a>
+                    </li>
+                    <li class="hashtag">
+                      <a href="#"><span class="label label-success">#Lightroom</span></a>
+                    </li>
+                  </ul>
+                  <p class="progress-header">Progress</p>
+                  <div class="progress">
+                    <div class="progress-bar" style="width: 100%"></div>
+                  </div>
+                  <hr>
+                  <ul class="project-params">
+                    <li class="param">
+                      <span>40 <i class="fa fa-heart-o"></i></span>
+                    </li>
+                    <li class="param">
+                      <span>25 <i class="fa fa-eye"></i></span>
+                    </li>
+                    <li class="param">
+                      <span>0/3 <i class="fa fa-child"></i></span>
+                    </li>
+                  </ul>
+                  <div class="description-sector">
+                    <p class="description-header"><b>Description</b></p>
+                    <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In et finibus felis. Aliquam ante nunc, venenatis vitae tristique convallis, ultrices a nunc. Duis at nibh.</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="panel panel-hashtag col-sm-3 col-md-3 col-lg-2 col-lg-offset-1">
+              <div class="panel-heading">
+                <h3 class="panel-title"><a href="project.html">#Java</a></h3>
+              </div>
+              <div class="panel-body">
+                <div class="info-container">
+                  <ul class="hashtag-params">
+                    <li class="param">
+                      <span><a href="#findProjects">33 <i class="fa fa-file-archive-o"></i></a></span>
+                    </li>
+                    <li class="param">
+                      <span><a href="#findPeople">350 <i class="fa fa-users"></i></a></span>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <div class="panel col-sm-3 col-md-3 col-lg-2 col-lg-offset-1">
+              <div class="panel-heading">
+                <h3 class="panel-title"><a href="project.html">Sample art panel</a></h3>
+              </div>
+              <div class="panel-body">
+                <div class="image-container">
+                  <a href="#"><img src="../img/proj_img-1.jpg"></img></a>
+                </div>
+                <div class="info-container">
+                  <p><b>by <a href="#" class="author">John Doe</a></b></p>
+                  <p class="project-category">Category: <a href="#">Art</a></p>
+                  <hr>
+                  <ul class="project_hashtags">
+                    <li class="hashtag">
+                      <a href="#"><span class="label label-success">#Photoshop</span></a>
+                    </li>
+                    <li class="hashtag">
+                      <a href="#"><span class="label label-success">#Illustrator</span></a>
+                    </li>
+                    <li class="hashtag">
+                      <a href="#"><span class="label label-success">#Lightroom</span></a>
+                    </li>
+                  </ul>
+                  <p class="progress-header">Progress</p>
+                  <div class="progress">
+                    <div class="progress-bar" style="width: 100%"></div>
+                  </div>
+                  <hr>
+                  <ul class="project-params">
+                    <li class="param">
+                      <span>40 <i class="fa fa-heart-o"></i></span>
                     </li>
                     <li class="param">
                       <span>25 <i class="fa fa-eye"></i></span>
@@ -201,7 +346,7 @@
                   <hr>
                   <ul class="project-params">
                     <li class="param">
-                      <span>40 <i class="fa fa-heart"></i></span>
+                      <span>40 <i class="fa fa-heart-o"></i></span>
                     </li>
                     <li class="param">
                       <span>25 <i class="fa fa-eye"></i></span>
@@ -214,59 +359,6 @@
                     <p class="description-header"><b>Description</b></p>
                     <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In et finibus felis. Aliquam ante nunc, venenatis vitae tristique convallis, ultrices a nunc. Duis at nibh.</p>
                   </div>
-                </div>
-              </div>
-            </div>
-            <div class="panel panel-profile col-sm-3 col-md-3 col-lg-2 col-lg-offset-1">
-              <div class="panel-body">
-                <div class="image-container profile-img">
-                  <a href="#profile"><img class="img-circle img-responsive" src="../img/author-m.jpg"></img></a>
-                </div>
-                <div class="info-container">
-                  <p class="author"><a href="#" class="author">John Doe</a></p>
-                  <p class="author-email">johnDoe@gmail.com</p>
-                  <hr>
-                    <ul class="project_hashtags">
-                      <li class="hashtag">
-                        <a href="#"><span class="label label-success">#CSS3</span></a>
-                      </li>
-                      <li class="hashtag">
-                        <a href="#"><span class="label label-success">#HTML5</span></a>
-                      </li>
-                      <li class="hashtag">
-                        <a href="#"><span class="label label-success">#JS</span></a>
-                      </li>
-                    </ul>
-                  <hr>
-                  <ul class="project-params">
-                    <li class="param">
-                      <span>2 <i class="fa fa-star-o"></i></span>
-                    </li>
-                    <li class="param">
-                      <span>25 <i class="fa fa-comment-o"></i></span>
-                    </li>
-                    <li class="param">
-                      <span>1 <i class="fa fa-file-code-o"></i></span>
-                    </li>
-                  </ul>
-                  <p class="status status-available">Looking for a project</p>
-                </div>
-              </div>
-            </div>
-            <div class="panel panel-hashtag col-sm-3 col-md-3 col-lg-2 col-lg-offset-1">
-              <div class="panel-heading">
-                <h3 class="panel-title"><a href="project.html">#Java</a></h3>
-              </div>
-              <div class="panel-body">
-                <div class="info-container">
-                  <ul class="hashtag-params">
-                    <li class="param">
-                      <span><a href="#findProjects">33 <i class="fa fa-file-archive-o"></i></a></span>
-                    </li>
-                    <li class="param">
-                      <span><a href="#findPeople">350 <i class="fa fa-users"></i></a></span>
-                    </li>
-                  </ul>
                 </div>
               </div>
             </div>
@@ -334,6 +426,7 @@
     <script src="../js/readmore.min.js"></script>
     <script src="../js/bootstrap.min.js"></script>
     <script id="webplate-stack" src="../webplate/stack.js"></script>
+    <script src="../js/masonry.min.js"></script>
     <script src="../js/search.js"></script>
   </body>
 </html>
