--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
               <hr>
               <ul class="project-params">
                 <li class="param">
-                  <span>40 <i class="fa fa-heart"></i></span>
+                  <span>40 <i class="fa fa-heart-o"></i></span>
                 </li>
                 <li class="param">
                   <span>25 <i class="fa fa-eye"></i></span>
@@ -363,7 +363,7 @@
               <hr>
               <ul class="project-params">
                 <li class="param">
-                  <span>32 <i class="fa fa-heart"></i></span>
+                  <span>32 <i class="fa fa-heart-o"></i></span>
                 </li>
                 <li class="param">
                   <span>54 <i class="fa fa-eye"></i></span>
@@ -412,7 +412,7 @@
                 <hr>
                 <ul class="project-params">
                   <li class="param">
-                    <span>102 <i class="fa fa-heart"></i></span>
+                    <span>102 <i class="fa fa-heart-o"></i></span>
                   </li>
                   <li class="param">
                     <span>512 <i class="fa fa-eye"></i></span>
@@ -461,7 +461,7 @@
                 <hr>
                 <ul class="project-params">
                   <li class="param">
-                    <span>35 <i class="fa fa-heart"></i></span>
+                    <span>35 <i class="fa fa-heart-o"></i></span>
                   </li>
                   <li class="param">
                     <span>80 <i class="fa fa-eye"></i></span>
@@ -511,7 +511,7 @@
                 <hr>
                 <ul class="project-params">
                   <li class="param">
-                    <span>102 <i class="fa fa-heart"></i></span>
+                    <span>102 <i class="fa fa-heart-o"></i></span>
                   </li>
                   <li class="param">
                     <span>512 <i class="fa fa-eye"></i></span>
@@ -562,7 +562,7 @@
                 <hr>
                 <ul class="project-params">
                   <li class="param">
-                    <span>35 <i class="fa fa-heart"></i></span>
+                    <span>35 <i class="fa fa-heart-o"></i></span>
                   </li>
                   <li class="param">
                     <span>80 <i class="fa fa-eye"></i></span>
@@ -608,7 +608,7 @@
                 <hr>
                 <ul class="project-params">
                   <li class="param">
-                    <span>32 <i class="fa fa-heart"></i></span>
+                    <span>32 <i class="fa fa-heart-o"></i></span>
                   </li>
                   <li class="param">
                     <span>54 <i class="fa fa-eye"></i></span>
@@ -658,7 +658,7 @@
                   <hr>
                   <ul class="project-params">
                     <li class="param">
-                      <span>40 <i class="fa fa-heart"></i></span>
+                      <span>40 <i class="fa fa-heart-o"></i></span>
                     </li>
                     <li class="param">
                       <span>25 <i class="fa fa-eye"></i></span>
@@ -702,7 +702,7 @@
                   <hr>
                   <ul class="project-params">
                     <li class="param">
-                      <span>40 <i class="fa fa-heart"></i></span>
+                      <span>40 <i class="fa fa-heart-o"></i></span>
                     </li>
                     <li class="param">
                       <span>25 <i class="fa fa-eye"></i></span>
@@ -746,7 +746,7 @@
                   <hr>
                   <ul class="project-params">
                     <li class="param">
-                      <span>40 <i class="fa fa-heart"></i></span>
+                      <span>40 <i class="fa fa-heart-o"></i></span>
                     </li>
                     <li class="param">
                       <span>25 <i class="fa fa-eye"></i></span>
@@ -793,7 +793,7 @@
                   <hr>
                   <ul class="project-params">
                     <li class="param">
-                      <span>40 <i class="fa fa-heart"></i></span>
+                      <span>40 <i class="fa fa-heart-o"></i></span>
                     </li>
                     <li class="param">
                       <span>25 <i class="fa fa-eye"></i></span>
@@ -840,7 +840,7 @@
                   <hr>
                   <ul class="project-params">
                     <li class="param">
-                      <span>40 <i class="fa fa-heart"></i></span>
+                      <span>40 <i class="fa fa-heart-o"></i></span>
                     </li>
                     <li class="param">
                       <span>25 <i class="fa fa-eye"></i></span>
@@ -922,6 +922,7 @@
       <script src="js/bootstrap.min.js"></script>
       <script id="webplate-stack" src="webplate/stack.js"></script>
       <script src="js/readmore.min.js"></script>
+      <script src="js/masonry.min.js"></script>
       <script src="js/index.js"></script>
 
 
