--- a/html/search.html
+++ b/html/search.html
@@ -60,6 +60,21 @@
           <div class="list-group">
             <div class="form-group search-group">
               <p class="search-header">Search</p>
+              <div class="filters">
+                <ul>
+                  <li><a href="#" class="button line-black">Progress <i class="fa fa-arrow-down"></i></a></li>
+                  <li><a href="#" class="button line-black">Name <i class="fa fa-arrow-down"></i></a></li>
+                  <li><a href="#" class="button line-black">Date <i class="fa fa-arrow-down"></i></a></li>
+                  <div class="formplate">
+                      <input type="checkbox" name="checkbox-1" value="checkbox-1" id="checkbox-1">
+                      <label for="checkbox-1">Free</label>
+                  </div>
+                  <div class="formplate">
+                      <input type="checkbox" name="checkbox-2" value="checkbox-2" id="checkbox-2">
+                      <label for="checkbox-2">PM</label>
+                  </div>
+                </ul>
+              </div>
               <form>
                 <div class="input-group">
                   <input class="form-control input-sm xs-input" type="text" id="inputSmall">
