Complete search page, restyled nav.

--- a/html/project.html
+++ b/html/project.html
@@ -23,7 +23,7 @@
             <span class="icon-bar"></span>
           </button>
           <a class="navbar-brand vt-p" href="../index.html">
-            <img src="../img/emblem.png"/>
+            <img id="emblem" src="../img/emblem_dark.png"/>
             <span class="brand-name">TeamBaker</span>
           </a>
         </div>
