--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         </button>
 
         <a class="navbar-brand vt-p" href="index.html">
-          <img src="img/emblem.png"/>
+          <img id="emblem" src="img/emblem.png"/>
           <span class="brand-name">TeamBaker</span>
         </a>
       </div>
