--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
           </li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="#about" class="vt-p">About</a></li>
+          <li><a href="html/about.html" class="vt-p">About</a></li>
           <li><a class="auth" href="#signin" class="vt-p">Sign in</a></li>
         </ul>
       </div>
@@ -177,7 +177,7 @@
         </div>
 
         <div class="centeredText">
-          <span>Or use your Email address</span>
+          <span>Or use your email </span>
         </div>
 
         <div class="action_btns">
@@ -192,8 +192,8 @@
       </div>
       <div class="user_login">
         <form>
-          <label>Email / Username</label> <input type="text"><br>
-          <label>Password</label> <input type="password"><br>
+          <label>Email / Username</label> <input type="text" placeholder="Email or username"><br>
+          <label>Password</label> <input type="password" placeholder="Password"><br>
 
           <div class="formplate checkbox">
             <input type="checkbox" name="checkbox" value="checkbox" id="check_remember">
@@ -215,10 +215,10 @@
       </div>
       <div class="user_register">
         <form>
-          <label>Username</label> <input type="text"><br>
-          <label>Email Address</label> <input type="email"><br>
-          <label>Password</label> <input type="password"><br>
-          <input type="password"><br>
+          <label>Username</label> <input type="text" placeholder="Username"><br>
+          <label>Email</label> <input type="email" placeholder="Email"><br>
+          <label>Password</label> <input type="password" placeholder="Password"><br>
+          <input type="password" placeholder="Password repeat"><br>
 
           <div class="formplate checkbox">
             <input type="checkbox" name="checkbox" value="checkbox" id="check_send_updates">
@@ -238,10 +238,10 @@
       </div>
       <div class="user_update">
         <form>
-          <label>Email Address</label> <input type="email"><br>
-          <label>Secret</label> <input type="text"><br>
-          <label>Password</label> <input type="password"><br>
-          <input type="password"><br>
+          <label>Email</label> <input type="email" placeholder="Email"><br>
+          <label>Secret</label> <input type="text" placeholder="Secret"><br>
+          <label>Password</label> <input type="password" placeholder="New password"><br>
+          <input type="password" placeholder="Password repeat"><br>
 
           <div class="action_btns">
             <div class="one_half">
@@ -296,7 +296,7 @@
             <a href="#"><img src="img/proj_img-1.jpg"></img></a>
           </div>
           <div class="info-container">
-            <p><b>by <a href="#" class="author">John Doe</a></b></p>
+            <p>by <a href="#" class="author">John Doe</a></p>
             <p class="project-category">Category: <a href="#">Art</a></p>
             <hr>
             <ul class="project_hashtags">
@@ -343,7 +343,7 @@
             <a href="#"><img src="img/proj_img-1.jpg"></img></a>
           </div>
           <div class="info-container">
-            <p><b>by <a href="#" class="author">John Doe</a></b></p>
+            <p>by <a href="#" class="author">John Doe</a></p>
             <p class="project-category">Category: <a href="#">Art</a></p>
             <hr>
             <ul class="project_hashtags">
@@ -389,7 +389,7 @@
             <a href="#"><img src="img/proj_img-1.jpg"></img></a>
           </div>
           <div class="info-container">
-            <p><b>by <a href="#" class="author">John Doe</a></b></p>
+            <p>by <a href="#" class="author">John Doe</a></p>
             <p class="project-category">Category: <a href="#">Art</a></p>
             <hr>
             <ul class="project_hashtags">
@@ -435,7 +435,7 @@
             <a href="#"><img src="img/proj_img-1.jpg"></img></a>
           </div>
           <div class="info-container">
-            <p><b>by <a href="#" class="author">John Doe</a></b></p>
+            <p>by <a href="#" class="author">John Doe</a></p>
             <p class="project-category">Category: <a href="#">Art</a></p>
             <hr>
             <ul class="project_hashtags">
@@ -481,7 +481,7 @@
             <a href="#"><img src="img/proj_img-1.jpg"></img></a>
           </div>
           <div class="info-container">
-            <p><b>by <a href="#" class="author">John Doe</a></b></p>
+            <p>by <a href="#" class="author">John Doe</a></p>
             <p class="project-category">Category: <a href="#">Art</a></p>
             <hr>
             <ul class="project_hashtags">
@@ -527,7 +527,7 @@
             <a href="#"><img src="img/proj_img-1.jpg"></img></a>
           </div>
           <div class="info-container">
-            <p><b>by <a href="#" class="author">John Doe</a></b></p>
+            <p>by <a href="#" class="author">John Doe</a></p>
             <p class="project-category">Category: <a href="#">Art</a></p>
             <hr>
             <ul class="project_hashtags">
@@ -573,7 +573,7 @@
             <a href="#"><img src="img/proj_img-1.jpg"></img></a>
           </div>
           <div class="info-container">
-            <p><b>by <a href="#" class="author">John Doe</a></b></p>
+            <p>by <a href="#" class="author">John Doe</a></p>
             <p class="project-category">Category: <a href="#">Art</a></p>
             <hr>
             <ul class="project_hashtags">
@@ -619,7 +619,7 @@
             <a href="#"><img src="img/proj_img-1.jpg"></img></a>
           </div>
           <div class="info-container">
-            <p><b>by <a href="#" class="author">John Doe</a></b></p>
+            <p>by <a href="#" class="author">John Doe</a></p>
             <p class="project-category">Category: <a href="#">Art</a></p>
             <hr>
             <ul class="project_hashtags">
@@ -665,7 +665,7 @@
             <a href="#"><img src="img/proj_img-1.jpg"></img></a>
           </div>
           <div class="info-container">
-            <p><b>by <a href="#" class="author">John Doe</a></b></p>
+            <p>by <a href="#" class="author">John Doe</a></p>
             <p class="project-category">Category: <a href="#">Art</a></p>
             <hr>
             <ul class="project_hashtags">
@@ -711,7 +711,7 @@
             <a href="#"><img src="img/proj_img-1.jpg"></img></a>
           </div>
           <div class="info-container">
-            <p><b>by <a href="#" class="author">John Doe</a></b></p>
+            <p>by <a href="#" class="author">John Doe</a></p>
             <p class="project-category">Category: <a href="#">Art</a></p>
             <hr>
             <ul class="project_hashtags">
@@ -757,7 +757,7 @@
             <a href="#"><img src="img/proj_img-1.jpg"></img></a>
           </div>
           <div class="info-container">
-            <p><b>by <a href="#" class="author">John Doe</a></b></p>
+            <p>by <a href="#" class="author">John Doe</a></p>
             <p class="project-category">Category: <a href="#">Art</a></p>
             <hr>
             <ul class="project_hashtags">
@@ -803,7 +803,7 @@
             <a href="#"><img src="img/proj_img-1.jpg"></img></a>
           </div>
           <div class="info-container">
-            <p><b>by <a href="#" class="author">John Doe</a></b></p>
+            <p>by <a href="#" class="author">John Doe</a></p>
             <p class="project-category">Category: <a href="#">Art</a></p>
             <hr>
             <ul class="project_hashtags">
@@ -849,7 +849,7 @@
             <a href="#"><img src="img/proj_img-1.jpg"></img></a>
           </div>
           <div class="info-container">
-            <p><b>by <a href="#" class="author">John Doe</a></b></p>
+            <p>by <a href="#" class="author">John Doe</a></p>
             <p class="project-category">Category: <a href="#">Art</a></p>
             <hr>
             <ul class="project_hashtags">
@@ -895,7 +895,7 @@
             <a href="#"><img src="img/proj_img-1.jpg"></img></a>
           </div>
           <div class="info-container">
-            <p><b>by <a href="#" class="author">John Doe</a></b></p>
+            <p>by <a href="#" class="author">John Doe</a></p>
             <p class="project-category">Category: <a href="#">Art</a></p>
             <hr>
             <ul class="project_hashtags">
